# opengl_boilerplate

./: .gitignore  CMakeLists.txt  GL_Renderer.cpp  main.cpp
include/: GL_Renderer.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: GL_Renderer.cpp  GL_Renderer.h  main.cpp
src/shaders/: frag.glsl  vert.glsl
